# cmake_dual_config_example

./: .gitignore  README.md
runtests/: CMakeLists.txt  testmain.cpp
xmltest/: CMakeLists.txt  xmltest.cpp  xmltest.h
xmltest/cmake/: xmltest-config.cmake.in
